--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.12.0"
-bevy_pancam = "0.10.0"
+bevy_egui = "0.23.0"
+bevy_pancam = { version = "0.10.0", features = ["bevy_egui"] }
 bevy_prototype_lyon = "0.10.0"
 bevy_rapier2d = "0.23.0"
 rand = "0.8.5"
