--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2021"
 [dependencies]
 bevy = "0.12.0"
 bevy_egui = "0.23.0"
+bevy_embedded_assets = "0.9.1"
 bevy_pancam = { version = "0.10.0", features = ["bevy_egui"] }
 bevy_prototype_lyon = "0.10.0"
 bevy_rapier2d = "0.23.0"
-rand = "0.8.5"
+bevy_turborand = "0.7.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
@@ -28,6 +29,7 @@ debug = false
 [profile.release]
 lto = "thin"
 opt-level = 3
+codegen-units = 1
 
 [profile.release.package."*"]
 opt-level = 3
